testing/errors/alreadydefined3.a
;ACME 0.96.5
	*=$1000
label
	nop
label	; -> already defined
